// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with answer 1`] = `
<div>
  <li
    class="CommentBox"
  >
    <h4
      class="CommentBox__title mt--0 mb--0"
      data-qa-sel="comment-box-title"
    >
      Question on 
      <span
        class="text-lowercase"
      >
        Consultation
      </span>
    </h4>
    <div
      class="font-weight-bold markdown mt--d mb--d"
    >
      Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
    </div>
    <section
      role="form"
    >
      <form
        class="mb--0 mt--e"
      />
    </section>
  </li>
</div>
`;

exports[`should match snapshot without answer 1`] = `
<div>
  <li
    class="CommentBox"
  >
    <h4
      class="CommentBox__title mt--0 mb--0"
      data-qa-sel="comment-box-title"
    >
      Question on 
      <span
        class="text-lowercase"
      >
        Consultation
      </span>
    </h4>
    <div
      class="font-weight-bold markdown mt--d mb--d"
    >
      Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
    </div>
  </li>
</div>
`;
